# rustboxd

./: CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: api.md  examples.md  performance.md
examples/: advanced_usage.rs  basic_usage.rs
src/: lib.rs
src/core/: client.rs  constants.rs  error.rs  mod.rs
src/models/: films.rs  list.rs  mod.rs  movie.rs  search.rs  user.rs
src/pages/: mod.rs  user_activity.rs  user_diary.rs  user_films.rs  user_likes.rs  user_lists.rs  user_network.rs  user_profile.rs  user_reviews.rs  user_tags.rs  user_watchlist.rs
src/utils/: mod.rs  parser.rs  transform.rs  validators.rs
tests/: integration_tests.rs  utils_tests.rs
